--- a/src/styles/5- pages/_home-page.scss
+++ b/src/styles/5- pages/_home-page.scss
@@ -223,3 +223,60 @@
         font-size: 20px;
     }
 }
+
+.title--center {
+    text-align: center;
+}
+
+.services-grid-container {
+    display: grid;
+    grid-template-columns: repeat(4, 25%);
+    grid-template-areas: "col col col col";
+    justify-content: center;
+    align-content: center;
+    grid-gap: .8em;
+    margin-top: 90px;
+    
+
+    @media only screen and (max-width: 768px) {
+        grid-template-columns: repeat(2, 50%);
+        grid-template-areas: "col col" "col col";
+    }
+
+    @media only screen and (max-width: 375px){
+        grid-template-columns: 1fr;
+        grid-template-areas: "col";
+    }
+}
+
+.service__grid-item {
+    max-width: 260px;
+}
+
+.service-item__icon--lg {
+    position: relative;
+    width: 70px;
+    height: 70px;
+    margin-bottom: 40px;
+    border-radius: 10px;
+    background-color: #F6F6F6;
+
+    & > svg {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
+
+.service-item__title--lg {
+    font-size: 1rem;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.service-item__txt--lg {
+    font-size: 13px;
+    color: #808080;
+    line-height: 1.8;
+}
